# python-architecture-project

./: .gitignore  README.md  pyproject.toml
src/modules/datalayer/: base.py
src/modules/datalayer/interfaces/: customer_repository_interface.py
src/modules/datalayer/repositories/mock/: customer_repository_mock.py  memdb.py
src/modules/domains/: base.py  customer.py  order.py  product.py
src/modules/factories/: customer_factory.py
src/modules/services/: base.py  customer_service.py
src/modules/services/exception/: customer_exception.py
tests/modules/domains/: test_customer.py  test_order.py  test_product.py
tests/modules/services/: test_customer_service.py
